--- a/public/style.css
+++ b/public/style.css
@@ -17,3 +17,13 @@ body {
     background-color: #e4aa48;
     margin-left: 10px;
 }
+
+button.link {
+    background: none;
+    border: none;
+    margin: 0;
+    padding: 3;
+    outline: none;
+    outline-offset: 0;
+    color: white;
+}
