--- a/BooksShop_Universal/Views/index.ejs
+++ b/BooksShop_Universal/Views/index.ejs
@@ -6,9 +6,8 @@
     <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
 <body>
-    <div id="app">
-        <%= html %>
-    </div>
+    <div id="app"><%- reactComponent -%></div>
+    <script>window.INITIAL_STATE=<%- initialState -%></script>
     <script src="bundle.js"></script>    
 </body>
 </html>
