--- a/BooksShop_Universal/Views/index.pug
+++ b/BooksShop_Universal/Views/index.pug
@@ -5,7 +5,7 @@ html
 		link(href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/cyborg/bootstrap.min.css", rel="stylesheet", integrity="sha384-D9XILkoivXN+bcvB2kSOowkIvIcBbNdoDQvfBNsxYAIieZbx8/SI4NeUvrRGCpDi", crossorigin="anonymous")
 		link(rel="stylesheet", href="style.css", type="text/css")
 	body
-		#app #{reactComponent}
+		#app !{reactComponent}
 		script. 
-			window.INITIAL_STATE=#{initialState};
+			window.INITIAL_STATE=!{initialState};
 		script(src="bundle.js")
